k8s-resources/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teamblue-production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: teamblue-production
  labels:
    app: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata: 
      labels:
        app: hello-world
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: "Memory"
        - name: save-the-world-data
          persistentVolumeClaim:
            claimName: save-the-world-claim
      containers:
      - image: ghcr.io/sazo/hello-world-app:v0.0.1
        name: hello-world-app
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
          - mountPath: "/data"
              name: save-the-world-data
